Закончил с версткой и настройкой логики

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.23",
     "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
@@ -26,10 +28,12 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vee-validate": "^4.15.1",
-    "vue": "^3.5.27"
+    "vue": "^3.5.27",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.4",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^24.10.10",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/eslint-config-typescript": "^14.6.0",
